--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.13.1",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
+    "formik": "^2.4.8",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
